Adding initial QR code functionality

--- a/app/views/video_calls/_room.html.erb
+++ b/app/views/video_calls/_room.html.erb
@@ -8,3 +8,4 @@
   <%= tag.div id: "room-container", data: { action:"turbo:frame-render->join-room#connect" } %>
 <% end %>
 <%= link_to 'Leave video call', root_path, class: 'button alert' %>
+<%= raw(@qr.html_safe) %>
