--- a/app/views/pages/outro.html.erb
+++ b/app/views/pages/outro.html.erb
@@ -1,7 +1,10 @@
-<h1>Vonage Video Demo</h1>
-<picture>
-  <source srcset="/img/VonageLogo_Primary_White.png" media="(prefers-color-scheme:dark)">
-  <img src="/img/VonageLogo_Primary_Black.png" alt="Vonage logo">
-</picture>
-<p>Thanks for trying the demo</p>
-<%= link_to 'Vonage Developer Documentation', 'https://developer.vonage.com' %>
+<h1>Learn more!</h1>
+<p>Thanks for trying out the demo! We hope you enjoyed this small taste of what Vonage APIs have to offer. To find out more about Vonage products and our developer community, follow the links in the list below. To get started right away with Vonage APIs, use <%= link_to 'this link', 'https://developer.vonage.com/en/events/register/webdevcon-2025', target: :blank %> to sign up for a free account today and get an extra €10 free credit.</p>
+<ul>
+  <li><%= link_to 'Vonage Video API', 'https://developer.vonage.com/en/video/overview', target: :blank %></li>
+  <li><%= link_to 'Vonage Developer Documentation', 'https://developer.vonage.com', target: :blank %></li>
+  <li><%= link_to 'Vonage Developer Blog', 'https://developer.vonage.com/en/blog', target: :blank %></li>
+  <li><%= link_to 'Vonage Community Slack', 'https://developer.vonage.com/en/community/slack', target: :blank %></li>
+</ul>
+<img src="/img/Voyagers_Ruby.png" alt="Vonage Voyagers: Ruby">
+
