--- a/app/views/video_calls/not_found.html.erb
+++ b/app/views/video_calls/not_found.html.erb
@@ -1,2 +1,3 @@
 <h1>Video Call Not Found</h1>
 <p>The video call you specified could not be found. Either it does not exist or the call has ended.</p>
+<img src="/img/Voyagers_VAI.png" alt="Vonage Voyagers: Ruby">
